WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135417
[Linux] Resource leak of unclosed file descriptor - when open returns zero, descriptor handle leaks.
https://bugs.webkit.org/show_bug.cgi?id=135417
Summary
[Linux] Resource leak of unclosed file descriptor - when open returns zero, d...
przemeks@pkuczynski.com
Reported
2014-07-30 07:04:41 PDT
When open returns zero, fd handle leaks. Checking (fd > 0) needs to be replaced with (fd != -1).
Attachments
proposed patch
(1.26 KB, patch)
2014-07-30 07:39 PDT
,
przemeks@pkuczynski.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
przemeks@pkuczynski.com
Comment 1
2014-07-30 07:39:52 PDT
Created
attachment 235744
[details]
proposed patch
Gyuyoung Kim
Comment 2
2014-07-31 01:38:58 PDT
CC'ing Filip.
WebKit Commit Bot
Comment 3
2014-08-05 18:03:12 PDT
Comment on
attachment 235744
[details]
proposed patch Clearing flags on attachment: 235744 Committed
r172113
: <
http://trac.webkit.org/changeset/172113
>
WebKit Commit Bot
Comment 4
2014-08-05 18:03:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug