Fix resource leak of unclosed file descriptor. https://bugs.webkit.org/show_bug.cgi?id=135417

Patch by Przemyslaw Kuczynski <p.kuczynski@samsung.com> on 2014-08-05
Reviewed by Darin Adler.

When open returns zero, fd handle leaks. Checking (fd > 0) needs to be replaced
with (fd != -1).

* assembler/MacroAssemblerARM.cpp:
(JSC::isVFPPresent):

Canonical link: https://commits.webkit.org/153490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172113 268f45cc-cd09-0410-ab3c-d52691b4dbfc